# diabeat

./: .gitignore  README.md  pyproject.toml
data/: data.pkl  features.xlsx  processed.pkl  val.pkl
data/legacy/: train.pkl
scripts/: generate_k_folds.py  process_data.py
src/: config.yaml  data.py  legacy.py  legacy_models.py  model.py  new_data.py  trainer.py  trainer_lightning.py  utils.py
